--- a/ckanext/publicamundi/storers/raster/templates/package/snippets/resource_item.html
+++ b/ckanext/publicamundi/storers/raster/templates/package/snippets/resource_item.html
@@ -2,7 +2,7 @@
 
 {% block resource_item_file %}
 {{ super() }}
-{% set raster_resources = h.get_ingested_raster_from_resource(pkg,res) %}
+{% set raster_resources = h.get_ingested_raster(pkg,res) %}
 
 {% for raster_res in raster_resources %}
             {% if raster_res.format == 'wms' %}
