--- a/ckanext/publicamundi/themes/geodata/templates/snippets/main_menu.html
+++ b/ckanext/publicamundi/themes/geodata/templates/snippets/main_menu.html
@@ -11,7 +11,7 @@
 <a href="{{ h.get_maps_url() }}">{{_('Maps')}}</a>
 </li>
 <li>
-    <a href="{{ h.url_for(controller='ckanext.publicamundi.themes.geodata.controllers.static:Controller', action='developers')}}">{{_('Apps')}}</a>
+<a href="{{ h.url_for(controller='ckanext.publicamundi.themes.geodata.controllers.static:Controller', action='applications')}}">{{_('Apps')}}</a>
 </li>
 <li>
 <a href="{{ h.get_news_url() }}">{{_('News')}}</a>
