--- a/ckanext/publicamundi/storers/vector/templates/package/snippets/download_options.html
+++ b/ckanext/publicamundi/storers/vector/templates/package/snippets/download_options.html
@@ -1,7 +1,7 @@
 {% ckan_extends %}
 
 {% block download_options_items %}    
-{% set vector_resources = h.get_ingested_vector_from_resource(pkg,res) %}
+{% set vector_resources = h.get_ingested_vector(pkg,res) %}
 {{ super() }}
     {% for vector_res in vector_resources %}
         {% if vector_res.vectorstorer_resource and vector_res.format in ['wfs'] %}
