--- a/ckanext/publicamundi/storers/vector/templates/package/snippets/resource_item.html
+++ b/ckanext/publicamundi/storers/vector/templates/package/snippets/resource_item.html
@@ -3,7 +3,7 @@
 {% block resource_item_file %}
 {{ super()}}
 
-{% set vector_resources = h.get_ingested_vector_from_resource(pkg,res) %}
+{% set vector_resources = h.get_ingested_vector(pkg,res) %}
     {% for vector_res in vector_resources %}
         {% if vector_res.format == 'wms' %}
         <div class="action-button"><a class="btn" href={{ "/maps/" + vector_res.id}} >
