--- a/ckanext/publicamundi/themes/geodata/templates/group/read.html
+++ b/ckanext/publicamundi/themes/geodata/templates/group/read.html
@@ -19,4 +19,7 @@
 {% endblock %}
 
 
-
+{% block scripts %}
+{{ super() }}
+{% resource 'ckanext-publicamundi-geodata-theme/facets' %}
+{% endblock %}
