--- a/ckanext/publicamundi/themes/geodata/templates/organization/read.html
+++ b/ckanext/publicamundi/themes/geodata/templates/organization/read.html
@@ -17,4 +17,7 @@
   {% endblock %}
 {% endblock %}
 
-
+{% block scripts %}
+{{ super() }}
+{% resource 'ckanext-publicamundi-geodata-theme/facets' %}
+{% endblock %}
