--- a/ckanext/publicamundi/themes/geodata/templates/snippets/search_form.html
+++ b/ckanext/publicamundi/themes/geodata/templates/snippets/search_form.html
@@ -27,7 +27,7 @@
   {% if sorting %}
       <div class="form-select control-group control-order-by">
         <label for="field-order-by">{{ _('Order by') }}</label>
-        <select id="field-order-by" name="sort">
+        <select id="field-order-by" name="sort" data-module="autocomplete">
           {% for label, value in sorting %}
             {% if label and value %}
               <option value="{{ value }}"{% if sorting_selected == value %} selected="selected"{% endif %}>{{ label }}</option>
