--- a/ckanext/publicamundi/templates/package/resource_read.html
+++ b/ckanext/publicamundi/templates/package/resource_read.html
@@ -12,6 +12,8 @@
         {% if res.resource_type == 'file' %}
         {% block resource_item_file %}
 
+            {% set raster_resources = h.get_ingested_raster(pkg,res) %}
+            {% set vector_resources = h.get_ingested_vector(pkg,res) %}
             <li>
                     <a class="btn btn-primary resource-url-analytics" href="{{ res.url }}"
                         ><i class="icon-download"></i> {{ _('Download') }}</a>
