--- a/ckanext/publicamundi/themes/geodata/public/css/main.css
+++ b/ckanext/publicamundi/themes/geodata/public/css/main.css
@@ -83,7 +83,7 @@ p a{
     text-align: left;
     color: #4E59A4;
     line-height: 30px;
-    padding: 0 0 0 10px;
+    padding: 0 7px 0 7px;
     font-weight: normal;
 }
 
