--- a/ckanext/publicamundi/templates/user/dashboard_datasets.html
+++ b/ckanext/publicamundi/templates/user/dashboard_datasets.html
@@ -6,3 +6,18 @@
 {% endif %}
 {% endblock %} {# page_primary_action #}
 
+{# {% block primary_content_inner %}
+  <h2 class="hide-heading">{{ _('My Datasets') }}</h2>
+    {% if c.page.items %}
+     {% snippet 'snippets/package_list.html', packages=c. %}
+     {% snippet 'snippets/package_list.html', packages=c.page.items %}
+         {{ c.page.pager() }} 
+  {% else %}
+    <p class="empty">
+      {{ _('You haven\'t created any datasets.') }}
+      {% if h.check_access('package_create') %}
+        {% link_for _('Create one now?'), controller='package', action='new' %}
+      {% endif %}
+    </p>
+  {% endif %}
+  {% endblock %} #}
