--- a/ckanext/publicamundi/themes/geodata/templates/snippets/facet_list.html
+++ b/ckanext/publicamundi/themes/geodata/templates/snippets/facet_list.html
@@ -64,9 +64,9 @@ within_tertiary
                     'groups': _('Topics'),
                     'tags': _('Tags'),
                     'res_format': _('Formats'),
-                    'license': _('Licenses'), } %}
+                    'license_id': _('Licenses'), } %}
 
-        {% set title = facet_titles.get(name)|capitalize %}
+                    {% set title = facet_titles.get(name)|capitalize %}
         {{ title }} <br> <div class="sorting"><a href="#" class="sort-name">{{_('A...Z ')}}</a> <a href="#" class="sort-count down">{{_('1...9 ')}}</a> </div>
       </h2>
         <nav>
